# trackable

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HOSTING.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.standalone.yaml  main.py  manage.py  pyproject.toml  requirements.txt
nginx/: trackable.conf
static/: manifest.json
static/css/: styles.css
static/js/: app.js  timer.js
templates/: base.html
templates/accounts/: login.html  password_reset.html  password_reset_confirm.html  register.html  settings.html
templates/admin/: email_test.html
templates/core/: datenschutz.html  landing.html
templates/emails/: email_confirm_email.html  monthly_report_email.html  password_reset_email.html
templates/organizations/: create.html  dashboard.html  employee_create.html  employee_dashboard.html  employee_detail.html  employee_profile_detail.html  employee_remove.html  holiday_form.html  holiday_list.html
templates/profiles/: create.html  detail.html  list.html
templates/timetracking/: add_entry.html  home.html  monthly_table.html
tests/: test_accounts.py  test_backups.py  test_emails.py  test_organizations.py  test_profiles.py  test_timetracking.py
trackable/: asgi.py  urls.py  wsgi.py
trackable/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
trackable/core/: admin.py  admin_site.py  apps.py  models.py  urls.py  views.py
trackable/organizations/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
trackable/profiles/: admin.py  apps.py  forms.py  (+3 more)
(+42 files in other folders)
